--- a/css/index.css
+++ b/css/index.css
@@ -769,7 +769,11 @@ input[type="radio"].visually-hidden {
 }
 
 .services-button:active {
-  color: rgb(0, 0, 0);
+  color: rgb(247, 225, 132);
+}
+
+.services-button:active::before {
+  background-color: rgb(0, 0, 0);
 }
 
 .services-control--current .button {
