--- a/css/index.css
+++ b/css/index.css
@@ -419,6 +419,7 @@ input[type="radio"].visually-hidden {
 .carousel-list {
   position: relative;
 
+  min-height: 495px;
   margin: 0;
   padding: 0;
 
@@ -436,7 +437,7 @@ input[type="radio"].visually-hidden {
   display: flex;
 }
 
-.carousel-list-item::before{
+.carousel-list-item::before {
   content: "";
   position: absolute;
   top: 36px;
@@ -752,6 +753,7 @@ input[type="radio"].visually-hidden {
   position: absolute;
   top: -74px;
   right: -4px;
+  z-index: 2;
 
   width: 7px;
   height: 160%;
@@ -761,6 +763,8 @@ input[type="radio"].visually-hidden {
 }
 
 .services-button {
+  position: relative;
+
   width: 160px;
   padding: 0;
 }
@@ -773,22 +777,42 @@ input[type="radio"].visually-hidden {
   background-color: rgb(0, 0, 0);
 }
 
-.services-control--current .button {
+.services-button:active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  z-index: -1;
+
+  width: 280px;
+  height: 40px;
+
+  background-color: rgb(0, 0, 0);
+}
+
+.services-button--current {
   color: rgb(247, 225, 132);
 
   background-color: rgb(0, 0, 0);
 }
 
-.services-control--current .button::before {
+.services-button--current::before {
   background-color: transparent;
+}
+
+.services-button--current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  z-index: -1;
+
+  width: 280px;
+  height: 40px;
+
+  background-color: rgb(0, 0, 0);
 }
 
 .services-control li {
   margin-bottom: 25px;
-}
-
-.services-control--current {
-  background-color: rgb(0, 0, 0);
 }
 
 .services-list {
