--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@ body {
   font-weight: 300;
   font-size: 15px;
   line-height: 30px;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   color: rgb(0, 0, 0);
 
   background-color: rgb(255, 255, 255);
@@ -95,7 +95,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 18px;
   line-height: 40px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   text-align: center;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
@@ -262,7 +262,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.2em;
 }
@@ -323,7 +323,7 @@ input[type="radio"].visually-hidden {
   font-weight: 300;
   font-size: 15px;
   line-height: 36px;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   text-transform: initial;
   letter-spacing: normal;
 
@@ -457,7 +457,7 @@ input[type="radio"].visually-hidden {
 
   font-weight: 800;
   font-size: 172px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   color: rgb(255, 255, 255);
   letter-spacing: 4px;
 }
@@ -515,7 +515,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 47px;
   line-height: 56px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
 }
 
 .carousel-list p {
@@ -545,7 +545,7 @@ input[type="radio"].visually-hidden {
   font-weight: 300;
   font-size: 36px;
   line-height: 48px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
 }
 
 .carousel-parameters th {
@@ -663,7 +663,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   color: rgb(0, 0, 0);
 
   background-color: rgb(255, 255, 255);
@@ -866,7 +866,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 47px;
   line-height: 48px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   letter-spacing: 1px;
 }
 
@@ -974,7 +974,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 47px;
   line-height: 48px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
 }
 
 .about p {
@@ -1036,7 +1036,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 47px;
   line-height: 48px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
 }
 
 .contacts p {
@@ -1253,7 +1253,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
 }
 
 .contacts-modal input,
@@ -1266,7 +1266,7 @@ input[type="radio"].visually-hidden {
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   color: rgba(70, 70, 70, 0.4);
 
   background-color: rgb(242, 242, 242);
@@ -1379,7 +1379,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 47px;
   line-height: 48px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   letter-spacing: 0.5px;
 }
 
@@ -1472,7 +1472,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 16px;
   line-height: 70px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.2em;
 
@@ -1496,7 +1496,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
 }
 
 .filter legend::before {
@@ -1569,7 +1569,7 @@ input[type="radio"].visually-hidden {
   font-weight: 300;
   font-size: 14px;
   line-height: 24px;
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial", sans-serif;
   color: rgba(0, 0, 0, 0.2);
 }
 
@@ -1579,7 +1579,7 @@ input[type="radio"].visually-hidden {
   font-weight: 300;
   font-size: 14px;
   line-height: 24px;
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial", sans-serif;
   text-align: left;
   color: rgba(0, 0, 0, 0.2);
 
@@ -1696,7 +1696,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 16px;
   line-height: 70px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.2em;
 }
@@ -1721,7 +1721,7 @@ input[type="radio"].visually-hidden {
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   color: rgba(0, 0, 0, 0.3);
 }
 
@@ -1821,7 +1821,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   letter-spacing: 0.3px;
 }
 
@@ -1852,7 +1852,7 @@ input[type="radio"].visually-hidden {
   font-weight: 300;
   font-size: 16px;
   line-height: 24px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   text-align: end;
   color: rgb(70, 70, 70);
 }
@@ -1913,7 +1913,7 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 14px;
   line-height: 24px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   color: rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
 
@@ -1950,7 +1950,7 @@ input[type="radio"].visually-hidden {
 
   font-weight: 800;
   font-size: 16px;
-  font-family: "Gilroy", Arial, sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
   letter-spacing: 0.2em;
