--- a/css/index.css
+++ b/css/index.css
@@ -90,13 +90,13 @@ input[type="radio"].visually-hidden {
   z-index: 1;
 
   display: inline-block;
-  vertical-align: middle;
   padding: 0 40px;
 
   font-weight: 800;
   font-size: 18px;
   line-height: 40px;
   font-family: "Gilroy", "Arial", sans-serif;
+  vertical-align: middle;
   text-align: center;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
@@ -564,15 +564,16 @@ input[type="radio"].visually-hidden {
   z-index: 1;
 
   display: inline-block;
-  vertical-align: middle;
   margin: 0;
   padding: 0;
 
   list-style: none;
+  vertical-align: middle;
 }
 
 .carousel-controls li {
   display: inline-block;
+
   vertical-align: middle;
 }
 
@@ -1234,6 +1235,7 @@ input[type="radio"].visually-hidden {
 
 .contacts-item {
   display: inline-block;
+
   vertical-align: middle;
 }
 
@@ -1571,12 +1573,12 @@ input[type="radio"].visually-hidden {
 .price-controls label {
   display: inline-block;
   width: 50%;
-  vertical-align: middle;
 
   font-weight: 300;
   font-size: 14px;
   line-height: 24px;
   font-family: "Gilroy", "Arial", sans-serif;
+  vertical-align: middle;
   color: rgba(0, 0, 0, 0.2);
 }
 
@@ -1675,7 +1677,7 @@ input[type="radio"].visually-hidden {
 
   background-color: rgb(239, 239, 239);
 }
-
+/*
 .sort-wrapper::before {
   content: "";
   position: absolute;
@@ -1686,12 +1688,24 @@ input[type="radio"].visually-hidden {
   height: 70px;
 
   background-color: rgb(239, 239, 239);
-}
+}*/
 
 .sort {
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  background-color: rgb(239, 239, 239);
+}
+
+.sort::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  z-index: -1;
+
+  width: 100%;
+  height: 70px;
 
   background-color: rgb(239, 239, 239);
 }
@@ -1716,8 +1730,12 @@ input[type="radio"].visually-hidden {
 }
 
 .sort-params {
-  display: flex;
   margin-left: 54px;
+}
+
+.sort-params li {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .sort-params li:not(:last-child) {
@@ -1954,11 +1972,11 @@ input[type="radio"].visually-hidden {
 .catalog-pagination a {
   display: inline-block;
   width: 100%;
-  vertical-align: middle;
 
   font-weight: 800;
   font-size: 16px;
   font-family: "Gilroy", "Arial", sans-serif;
+  vertical-align: middle;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
   letter-spacing: 0.2em;
