--- a/css/index.css
+++ b/css/index.css
@@ -270,6 +270,7 @@ input[type="radio"].visually-hidden {
 .site-navigation {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
@@ -331,13 +332,14 @@ input[type="radio"].visually-hidden {
 
 .site-navigation-catalog {
   position: absolute;
+  top: 24px;
   z-index: 2;
 
   display: none;
   box-sizing: border-box;
   width: calc(200% + 120px);
   margin: 0 -60px;
-  padding: 22px 60px 28px 60px;
+  padding: 23px 60px 28px 60px;
 
   font-weight: 300;
   font-size: 15px;
@@ -1110,7 +1112,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   flex-flow: row;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: baseline;
   margin-bottom: 62px;
 }
 
@@ -1594,34 +1596,29 @@ input[type="radio"].visually-hidden {
 .filter fieldset {
   position: relative;
 
-  margin: 14px 0 40px 0;
+  margin: 0 0 27px 0;
   padding: 0;
 
   border: none;
 }
 
 .filter legend {
+  display: inline-block;
+  width: 100%;
+  padding-top: 11px;
+
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
   font-family: "Gilroy", "Arial", sans-serif;
-}
 
-.filter legend::before {
-  content: "";
-  position: absolute;
-  top: -13px;
-
-  width: 100%;
-  height: 2px;
-
-  background-color: rgb(0, 0, 0);
+  border-top: 2px solid rgb(0, 0, 0);
 }
 
 .filter .range-filter {
   position: relative;
 
-  margin-top: 32px;
+  margin-top: 35px;
 }
 
 .filter .scale {
@@ -1657,11 +1654,11 @@ input[type="radio"].visually-hidden {
 }
 
 .range-controls .toggle-min {
-  left: 0;
+  left: -5;
 }
 
 .range-controls .toggle-max {
-  left: 110px;
+  left: 107px;
 }
 
 .price-controls {
@@ -1892,7 +1889,7 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog {
-  padding-bottom: 76px;
+  padding-bottom: 78px;
 }
 
 .catalog-wrapper {
