--- a/css/index.css
+++ b/css/index.css
@@ -738,19 +738,8 @@ input[type="radio"].visually-hidden {
 
   min-width: 1200px;
   padding-top: 54px;
-  padding-bottom: 160px;
-}
 
-.services::before {
-  content: "";
-  position: absolute;
-  top: 80px;
-  z-index: -1;
-
-  width: 100%;
-  height: 70%;
-
-  background-color: rgb(229, 229, 229);
+  background: linear-gradient(to bottom, #ffffff 80px, #e5e5e5 80px);
 }
 
 .services-wrapper {
@@ -773,6 +762,7 @@ input[type="radio"].visually-hidden {
   flex-shrink: 0;
   width: 280px;
   padding-top: 6px;
+  padding-bottom: 113px;
 }
 
 .services-control::before {
@@ -783,8 +773,7 @@ input[type="radio"].visually-hidden {
   z-index: 2;
 
   width: 7px;
-  height: 159%;
-  min-height: 320px;
+  height: calc(100% + 5px);
 
   background-color: rgb(0, 0, 0);
 }
@@ -845,6 +834,7 @@ input[type="radio"].visually-hidden {
 .services-list {
   flex-grow: 1;
   margin-left: 120px;
+  padding-bottom: 68px;
 }
 
 .services-list__item {
@@ -903,7 +893,7 @@ input[type="radio"].visually-hidden {
 }
 
 .brands {
-  margin-top: 47px;
+  margin-top: 94px;
   margin-bottom: 46px;
 }
 
