--- a/css/index.css
+++ b/css/index.css
@@ -1283,6 +1283,7 @@ input[type="radio"].visually-hidden {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-negative: 0;
   flex-shrink: 0;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
